--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -157,6 +157,10 @@
     \begin{itemize}
         \item [1.] Introduction to Neurons in Neural Networks. Medium. Consultado en Octubre 2020. Url: \\
         \href{https://medium.com/artificial-neural-networks/introduction-to-neurons-in-neural-networks-71828d040a65}{https://medium.com/artificial-neural-networks}
+        \item [2.] The complete guide to time series. Consultado en Octobre 2020. Url: \\
+        \href{https://towardsdatascience.com/the-complete-guide-to-time-series-analysis-and-forecasting-70d476bfe775}{https://towardsdatascience.com/the-complete-guide-to-time-series}
+        \item [3.] COVID Data European Union. Consultado en Octubre 2020. Url: \\
+        \href{https://www.ecdc.europa.eu/en/geographical-distribution-2019-ncov-cases}{https://www.ecdc.europa.eu}    
     \end{itemize}
 \printindex
 \end{document}
