--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -130,7 +130,7 @@
     
         \begin{figure}[h]
                 \centering
-                \includegraphics[width=320px]{aa_tf_100383511_100383435/img/estacional.png}
+                \includegraphics[width=320px]{img/estacional.png}
                 \caption{Serie temporal estacional y estacionaria}
                 \label{fig:graf_exp1}
             \end{figure}
@@ -138,7 +138,7 @@
             
         \begin{figure}[h]
                 \centering
-                \includegraphics[width=320px]{aa_tf_100383511_100383435/img/covid-cases.png}
+                \includegraphics[width=320px]{img/covid-cases.png}
                 \caption{Casos mundiales de \textit{COVID}. [3]}
                 \label{fig:graf_exp1}
             \end{figure}
