New section added

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -387,10 +387,15 @@ La red de neuronas generada seguirá el algoritmo de \textit{Multilayer Perceptr
 
     \subsection{Arquitectura seleccionada}
 
-\section{Contexto de la práctica}
+  \section{Contexto de la práctica}
 
+    Otra de las numerosas maneras en las que la tecnología puede ayudar es la simulación del pliegue de proteínas, esencial para comprender el virus y por tanto la búsqueda de la cura y la vacuna. Uno de los proyectos más interesantes que han surgido al respecto es \textit{folding@home} [5], un proyecto de computación distribuida en que están implicados universidades como \textit{Stanford} o la\textit{ Universidad de Washington} y empresas como \textit{Google} o \textit{Nvidia} que buscan simular las dinámicas de las proteínas, incluyendo su pliegue, lo cual explica su nombre.
 
- \section{Conclusiones}
+    \vspace{2mm}
+    
+    De manera breve, lo que ellos van a hacer es usar el poder de cálculo de todos los ordenadores que lo tengan instalado cuando no estén en uso para encontrar la cura de diversas enfermedades como el coronavirus, pero también el Alzheimer o el Párkinson. Lo único que el usuario debe hacer es seleccionar la cura de la enfermedad a la que desea contribuir y el programa de manera automática aprovechará el tiempo IDLE del ordenador para realizar los cálculos que los científicos necesitan. A continuación se ofrece un  \href{https://www.youtube.com/watch?v=xqvAHnac79U}{\underline{link}} una pequeña guía de instalación en formato vídeo del software necesario realizado por uno de los autores de este documento. [6]
+  
+  \section{Conclusiones}
 
 \clearpage
 
@@ -404,7 +409,11 @@ La red de neuronas generada seguirá el algoritmo de \textit{Multilayer Perceptr
         \href{https://www.ecdc.europa.eu/en/geographical-distribution-2019-ncov-cases}{https://www.ecdc.europa.eu}
         \item [4.] The Humanitarian Data Exchange. Consultado en Octubre 2020. Url: \\
         \href{https://data.humdata.org/dataset/novel-coronavirus-2019-ncov-cases}{https://data.humdata.org/dataset/novel-coronavirus}
-    \end{itemize}
+        \item [5.] Folding@home. Consultado en Octubre 2020. Url: \\
+        \href{https://foldingathome.org}{https://foldingathome.org}
+        \item [6.] Descubre cómo puedes ayudar a encontrar una CURA para el CORONAVIRUS desde tu salón. Consultado en Octubre 2020. Url: \\
+        \href{https://www.youtube.com/watch?v=xqvAHnac79U}{https://www.youtube.com/watch?v=xqvAHnac79U}
+      \end{itemize}
 \printindex
 
 
